# ds5230-group-assignment2

./: README.md  main.py  poorly_reconstructed_samples.csv  pyproject.toml  rbm.ipynb  table.csv  table.tex  table2.tex
report/: main.tex  refs.bib
